# lightspeed-15min

./: .env  .gitignore  Cargo.toml  eventsslug{slug}.md
notebooks/: btc_15min_eda.ipynb  polymarket_best_price_duration.ipynb
src/: btc.rs  bucket.rs  config.rs  db.rs  display.rs  gamma.rs  main.rs  orderbook.rs  websocket.rs
