[package]
name = "lightspeed-15min"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ureq = { version = "2.9", features = ["json"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.0"
crossterm = "0.27"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
dotenvy = "0.15"

